// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user module should create user execute request 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      Object {
        "action": Object {
          "meta": undefined,
          "payload": Object {
            "test": true,
          },
          "type": "users/currentUser/CREATE_CURRENT_USER",
        },
        "crudOptions": Object {
          "onSuccess": [Function],
          "operationId": "usersCreate",
        },
        "meta": undefined,
        "parameters": Object {
          "test": true,
        },
        "types": Array [
          "users/currentUser/CREATE_CURRENT_USER_REQUEST",
          "users/currentUser/CREATE_CURRENT_USER_SUCCESS",
          "users/currentUser/CREATE_CURRENT_USER_FAILURE",
          "users/currentUser/CREATE_CURRENT_USER_ABORT",
          "users/currentUser/CREATE_CURRENT_USER_UPLOAD_PROGRESS",
          "users/currentUser/CREATE_CURRENT_USER_DOWNLOAD_PROGRESS",
        ],
      },
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;

exports[`user module should delete user execute request 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      Object {
        "action": Object {
          "meta": undefined,
          "payload": undefined,
          "type": "users/currentUser/DELETE_CURRENT_USER",
        },
        "crudOptions": Object {
          "onSuccess": [Function],
          "operationId": "currentUserDelete",
        },
        "meta": undefined,
        "parameters": undefined,
        "types": Array [
          "users/currentUser/DELETE_CURRENT_USER_REQUEST",
          "users/currentUser/DELETE_CURRENT_USER_SUCCESS",
          "users/currentUser/DELETE_CURRENT_USER_FAILURE",
          "users/currentUser/DELETE_CURRENT_USER_ABORT",
          "users/currentUser/DELETE_CURRENT_USER_UPLOAD_PROGRESS",
          "users/currentUser/DELETE_CURRENT_USER_DOWNLOAD_PROGRESS",
        ],
      },
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;

exports[`user module should request user execute request 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      Object {
        "action": Object {
          "meta": undefined,
          "payload": undefined,
          "type": "users/currentUser/REQUEST_CURRENT_USER",
        },
        "crudOptions": Object {
          "onFailure": [Function],
          "operationId": "currentUserGet",
        },
        "meta": undefined,
        "parameters": undefined,
        "shouldExecuteJsonApiAction": undefined,
        "types": Array [
          "users/currentUser/REQUEST_CURRENT_USER_REQUEST",
          "users/currentUser/REQUEST_CURRENT_USER_SUCCESS",
          "users/currentUser/REQUEST_CURRENT_USER_FAILURE",
          "users/currentUser/REQUEST_CURRENT_USER_ABORT",
          "users/currentUser/REQUEST_CURRENT_USER_UPLOAD_PROGRESS",
          "users/currentUser/REQUEST_CURRENT_USER_DOWNLOAD_PROGRESS",
        ],
      },
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;

exports[`user module should update user execute request 1`] = `
Object {
  "@@redux-saga/IO": true,
  "combinator": false,
  "payload": Object {
    "args": Array [
      Object {
        "action": Object {
          "meta": undefined,
          "payload": Object {
            "test": true,
          },
          "type": "users/currentUser/UPDATE_CURRENT_USER",
        },
        "crudOptions": Object {
          "onSuccess": [Function],
          "operationId": "currentUserUpdate",
        },
        "meta": undefined,
        "parameters": Object {
          "test": true,
        },
        "types": Array [
          "users/currentUser/UPDATE_CURRENT_USER_REQUEST",
          "users/currentUser/UPDATE_CURRENT_USER_SUCCESS",
          "users/currentUser/UPDATE_CURRENT_USER_FAILURE",
          "users/currentUser/UPDATE_CURRENT_USER_ABORT",
          "users/currentUser/UPDATE_CURRENT_USER_UPLOAD_PROGRESS",
          "users/currentUser/UPDATE_CURRENT_USER_DOWNLOAD_PROGRESS",
        ],
      },
    ],
    "context": null,
    "fn": [Function],
  },
  "type": "CALL",
}
`;
